--- a/estilo/style.css
+++ b/estilo/style.css
@@ -47,6 +47,7 @@
  header h1 {
     text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.178);
     font-family: var(--fontediferente);
+    font-variant: small-caps;
     font-size: 7.5vh;
  }
 
